--- a/src/UI/Card/Card.module.css
+++ b/src/UI/Card/Card.module.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: grey;
+  background-color: #f5f5f5;
 }
 .train_info {
   padding: 0.6em;
@@ -20,4 +20,30 @@
 } */
 .book {
   margin: auto;
+}
+.train_class {
+  border: red solid 2px;
+  width: 50%;
+  /*  padding: 0.6em; */
+  padding-left: 0.6em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 0.6em;
+}
+.coach_container {
+  border: none;
+  background-color: #f5f5f5;
+  width: 8vw;
+  height: 3vw;
+  font-size: 1.5rem;
+  /* border: yellow 2px solid; */
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+}
+.coach_container :focus {
+  border: black solid 2px;
 }
